--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -33,7 +33,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a.filled-button {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	color: #fff;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -174,7 +174,7 @@ a.border-button:hover {
 /* Sub Header Style */
 
 .sub-header {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	height: 46px;
 	line-height: 46px;
 }
@@ -309,8 +309,8 @@ header .navbar {
 .navbar .navbar-nav .nav-link.active,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #a4c639;
-	border-bottom: 3px solid #a4c639;
+	color: #1e4bd4;
+	border-bottom: 3px solid #1e4bd4;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
@@ -327,7 +327,7 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\f0c9';
-	color: #a4c639;
+	color: #1e4bd4;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
@@ -455,7 +455,7 @@ ul.slick-dots {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
-  color:#a4c639;
+  color:#1e4bd4;
   animation:fadeOutRight 1s both;
 }
 
@@ -522,7 +522,7 @@ ul.slick-dots {
 /* Request Form */
 
 .request-form {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	padding: 40px 0px;
 	color: #fff;
 }
@@ -606,7 +606,7 @@ ul.slick-dots {
 
 .fun-facts em {
 	font-style: normal;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 .fun-facts p {
@@ -627,7 +627,7 @@ ul.slick-dots {
 
 .count-digit {
     margin: 5px 0px;
-    color: #a4c639;
+    color: #1e4bd4;
     font-weight: 700;
     font-size: 36px;
 }
@@ -685,7 +685,7 @@ ul.slick-dots {
 
 .more-info .right-content em {
 	font-style: normal;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 .more-info .right-content p {
@@ -726,7 +726,7 @@ ul.slick-dots {
 	margin-top: 8px;
 	font-weight: 600;
 	font-size: 14px;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 .testimonial-item img {
 	max-width: 60px;
@@ -759,7 +759,7 @@ ul.slick-dots {
 }
 
 .callback-form .contact-form {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	padding: 60px;
 	border-radius: 5px;
 	text-align: center;
@@ -835,11 +835,11 @@ ul.slick-dots {
 
 .callback-form .contact-form button.border-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 .contact-us .contact-form button.filled-button {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	color: #fff;
 	border: none;
 	font-size: 13px;
@@ -857,7 +857,7 @@ ul.slick-dots {
 
 .contact-us .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 
@@ -931,7 +931,7 @@ footer ul.social-icons li a {
 }
 
 footer ul.social-icons li a:hover {
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 }
 
 footer ul.menu-list li {
@@ -949,7 +949,7 @@ footer ul.menu-list li a {
 }
 
 footer ul.menu-list li a:hover {
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 footer .contact-form input {
@@ -1010,7 +1010,7 @@ footer .contact-form ::placeholder {
 footer .contact-form button.filled-button {
 	background-color: transparent;
 	color: #fff;
-	background-color: #a4c639;
+	background-color: #1e4bd4;
 	border: none;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -1027,7 +1027,7 @@ footer .contact-form button.filled-button {
 
 footer .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #a4c639;
+	color: #1e4bd4;
 }
 
 
@@ -1105,7 +1105,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .team-item .down-content span {
-	color: #a4c639;
+	color: #1e4bd4;
 	font-weight: 600;
 	font-size: 14px;
 	display: block;
@@ -1140,7 +1140,7 @@ footer .contact-form button.filled-button:hover {
 	width: 100%;
 	padding: 30px 30px;
 	display: inline-block;
-	background-color: #a4c639;
+	background-color: #1e4bd4;
   	font-size: 20px;
   	color: #121212;
   	letter-spacing: 0.5px;
