--- a/assets/css/templatemo-finance-business.css
+++ b/assets/css/templatemo-finance-business.css
@@ -1201,7 +1201,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .contact-information .contact-item i {
-	color: #a4c639;
+	color: #1e4bd4;
 	font-size: 48px;
 	margin-bottom: 40px;
 }
@@ -1219,7 +1219,7 @@ footer .contact-form button.filled-button:hover {
 
 .contact-information .contact-item a {
 	font-weight: 600;
-	color: #a4c639;
+	color: #1e4bd4;
 	font-size: 15px;
 }
 
